[package]
name = "serde_flexitos"
version = "0.2.0"
description = "Flexible serialization and deserialization of trait objects with serde"
repository = "https://github.com/Gohla/serde_flexitos"
edition = "2021"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
license = "Apache-2.0"

[dependencies]
serde = "1"
erased-serde = "0.4"

[features]
default = []
id_trait = []
permissive = []

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linkme = "0.3"
once_cell = "1"
paste = "1"

[[example]]
name = "macros"
required-features = ["id_trait"]

[profile.dist]
inherits = "dev"

[workspace.metadata.dist]
cargo-dist-version = "0.9.0"
ci = ["github"]
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"

[workspace.metadata.release]
tag-name = "release/serde_flexitos/{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
