[package]
name = "serde_flexitos"
version = "0.2.1"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
description = "Flexible serialization and deserialization of trait objects with Serde"
repository = "https://github.com/Gohla/serde_flexitos"
license = "Apache-2.0"
keywords = ["trait-object", "dyn", "serialization", "serde"]
categories = ["encoding", "rust-patterns"]
resolver = "2"

[dependencies]
serde = "1"
erased-serde = "0.4"

[features]
default = []
# Experimental/work-in-progress trait, macros, and implementations for unique and stable type identifiers.
id_trait = ["serde/derive"]
# Experimental/work-in-progress `DeserializeSeed` and `Visitor` implementations for permissive deserialization.
permissive = []

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linkme = "0.3"
paste = "1"

[[example]]
name = "macros"
required-features = ["id_trait"]
